--- a/front-end/src/.env
+++ b/front-end/src/.env
@@ -1,1 +1,2 @@
 REACT_APP_INFURA_URL="https://sepolia.infura.io/v3/2108921039b149338dc01609ce671289"  # Replace with your Infura/Alchemy project URL
+IP_ADDR=http://localhost:8080  
